# COSC363-Assignment-1

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  Vase.cpp  building.cpp  building.h  clean only.command  clean rerun cmake make assignemnt1.command  coil_top.off  copper_winding.tga  environment.cpp  environment.h  floor.off  keyboard.cpp  keyboard.h  lightning.cpp  lightning.h  loadBMP.h  loadOFF.cpp  loadOFF.h  loadTGA.h  main.cpp  main.h  rand_range.cpp  rand_range.h  remote_boat.off  skybox.cpp  skybox.h  tesla.tga  tesla_ oscillator.cpp  tesla_ oscillator.h  tesla_boat.cpp  tesla_boat.h  tesla_coil.cpp  tesla_coil.h  tesla_oscillator.cpp  tesla_oscillator.h  test_func.cpp  test_func.h  textures.cpp  textures.h  title.tga
Assignment1.xcodeproj/: project.pbxproj
Assignment1.xcodeproj/project.xcworkspace/xcshareddata/: Assignment1.xccheckout
Assignment1.xcodeproj/project.xcworkspace/xcuserdata/Ben.xcuserdatad/: UserInterfaceState.xcuserstate
Assignment1.xcodeproj/xcuserdata/Ben.xcuserdatad/xcschemes/: Assignment1.xcscheme  xcschememanagement.plist
LaTeX Report/: report.aux  report.out  report.tex  report.toc
